# whisperlive-client

./: .gitignore  README.md  client.py  conda-whislive-client-py311.yaml  export.py  py311-wslclient.yaml  pyproject.toml  ruff.toml
