[project]
name = "whisperlive-client"
version = "0.1.0"
description = "WhisperLive Client for real-time transcription"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.2.4",
    "pyaudio>=0.2.14",
    "websocket-client>=1.8.0",
]

[dependency-groups]
dev = [
    "ipython>=9.0.2",
    "isort>=6.0.1",
    "pyright>=1.1.398",
    "ruff>=0.11.2",
    "yapf>=0.43.0",
]
